stat homework finished

--- a/stat1/stat_5.ipynb
+++ b/stat1/stat_5.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:97231216a3c3bd57bbed1ab6d43aede63b843fe40b30ab1f85da8960264bb965"
+  "signature": "sha256:192adc2d77b5d59819479a002be20e95ce58bafb8375db55fe3747c9f7265676"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -241,10 +241,28 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "mu = 230/1500\n",
+      "sigma = (mu*(1-mu)/1500)**0.5\n",
+      "print (\"a.) ({0}, {1})\".format(mu - qnorm(0.975)*sigma, mu + qnorm(0.975)*sigma))\n",
+      "print(\"b.) \", round(0.5 + mu*(1-mu)*qnorm(0.975)**2/(.01**2)))\n",
+      "z= (mu - 0.5)/sigma\n",
+      "print(\"c.) z = {0} which is a little bit less than {1}, thus we reject the congressman's claims.\".format(z, qnorm(0.95) )) "
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "a.) (0.13509954197995744, 0.1715671246867092)\n",
+        "b.)  4988.0\n",
+        "c.) z = -37.26346145676506 which is a little bit less than 1.6448536269514722, thus we reject the congressman's claims.\n"
+       ]
+      }
+     ],
+     "prompt_number": 68
     },
     {
      "cell_type": "heading",
@@ -252,6 +270,15 @@
      "metadata": {},
      "source": [
       "10.16 "
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "a.) The difference can be described as a normal distribution?\n",
+      "\n",
+      "b.) yes, both $n\\pi$ and $n(1-\\pi)$ are bigger than 5."
      ]
     },
     {
@@ -263,6 +290,38 @@
      ]
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "$.01 = z_{\\alpha/2} \\sigma_{\\hat \\pi_1 - \\hat \\pi_2}$\n",
+      "\n",
+      "$n_1 = n_2$\n",
+      "\n",
+      "$\\sigma_{\\hat \\pi_1 - \\hat \\pi_2} = \\sqrt {\\frac {\\hat \\pi_1 (1 - \\hat \\pi_1 ) + \\hat \\pi_2 (1 - \\hat \\pi_2)} n}$ \n",
+      "\n",
+      "$\\rightarrow n = \\frac {(\\hat \\pi_1 (1 - \\hat \\pi_1 ) + \\hat \\pi_2 (1 - \\hat \\pi_2)) * z^2_{\\alpha/2}}{ .01^2}$"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print(round(0.5 +(.3*.7 + .1*.9)*qnorm(0.975)**2/(.01**2)))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "11525.0\n"
+       ]
+      }
+     ],
+     "prompt_number": 71
+    },
+    {
      "cell_type": "heading",
      "level": 3,
      "metadata": {},
@@ -271,11 +330,47 @@
      ]
     },
     {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "mu_1 = 91/250\n",
+      "mu_2 = 53/250\n",
+      "sigma = ((mu_1*(1-mu_1)+mu_2*(1-mu_2))/250)**0.5\n",
+      "print (\"a.) ({0}, {1})\".format(mu_1-mu_2 - qnorm(0.975)*sigma, mu_1-mu_2 + qnorm(0.975)*sigma))\n",
+      "z = (mu_1 - mu_2)/sigma\n",
+      "print(\"b.) z = {0} which is a little bit more than {1}, thus we reject the claim.\".format(z, -qnorm(0.99) ))\n",
+      "print(\"c.) The dealer should offer the warranty.\")"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "a.) (0.0737426852600768, 0.2302573147399232)\n",
+        "b.) z = 3.80685852357909 which is a little bit more than -2.3263478740408408, thus we reject the claim.\n",
+        "c.) The dealer should offer the warranty.\n"
+       ]
+      }
+     ],
+     "prompt_number": 77
+    },
+    {
      "cell_type": "heading",
      "level": 3,
      "metadata": {},
      "source": [
       "10.22 "
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "a.) We can see that the p-value is 0.021. This is less than 0.05, we therefore accept the research hypothesis.\n",
+      "\n",
+      "b.) Yes, because the confidence interval does not include zero."
      ]
     },
     {
@@ -287,12 +382,48 @@
      ]
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Cochran (1954) indicates that the approximation should be adequate if no $E_i$ is less than 1 and no more than 20% of the $E_i$s are less than 5. "
+     ]
+    },
+    {
      "cell_type": "heading",
      "level": 3,
      "metadata": {},
      "source": [
       "10.31 "
      ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "$$\\chi^2 = \\sum_i \\left[ \\frac {(n_i - E_i)^2 } { E_i} \\right] $$ "
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "chi = ((328 - 375)**2  + (372-375)**2 + (471 - 375)**2 +  (329 - 375)**2 )/375\n",
+      "print(\"a.) I have chi-square at: \", chi, \" This is far larger than \", qchisq(0.95,3))\n",
+      "print(\"b.) We therefore reject the null hypothesis and conclude that violence and the seasons are correlated.\")"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "a.) I have chi-square at:  36.13333333333333  This is far larger than  7.81472790325\n",
+        "b.) We therefore reject the null hypothesis and conclude that violence and the seasons are correlated.\n"
+       ]
+      }
+     ],
+     "prompt_number": 92
     },
     {
      "cell_type": "heading",
@@ -305,10 +436,90 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "x = array([399,231,158,212])\n",
+      "y = array([421,229,157,193])\n",
+      "\n",
+      "bar([0.4,1.4,2.4,3.4],x, color = 'pink', width = 0.4);\n",
+      "bar([0,1,2,3],y, color = 'orange', width = 0.4);"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "display_data",
+       "png": "iVBORw0KGgoAAAANSUhEUgAAAXoAAAEACAYAAAC9Gb03AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEqFJREFUeJzt3X+MHOV9x/H3GrAgJYnPojX+pRgBVn1VGkiLGyW0TFpi\nAaI2ERKGktRSrArJEaBEjYqrtr5LJIdEBaokAqkCIkPAiRW3llF+YRCjgqoATW1CcnGxEZZyLj5X\n4UyIaFQ73v7xPMeuz3u3c/vjZvzc+yWtZubZ2ZkvD/DZuWd39gFJkiRJkiRJkiRJkiRJkiR14Cxg\nL/BE3B4CRmPbXuDapn03AweA/cCa2StRktSNzwKPAbvj9pbYNtkgsA84B1gBHATmzUJ9kqQpFAnh\nZcB1wINALbbVmtabrQO2A8eBQ4SgX911lZKkjhUJ+vuAzwEnm9rqwO3AS8BDwILYvoQwpDNhFFja\nfZmSpE61C/rrgaOEcfjmK/gHgIuAy4DXgXumOUa9mwIlSd05u83zHwbWEoZuzgXeAzwC/GXTPg/S\n+JD2MLC86bllse0UF198cf3VV1/tsGRJmrNeBS7p5wmuohHoi5vaPwM8HtcnPoydT7jif5XWY/n1\nM8GWLVvKLqEQ6+ytM6HOM6HGet06e40OR0jaXdE3qzWd5MvAB+L2a8BtsX0E2BGXJ4BNnRYmSeqN\nmQR9Hh8An5xmv63xIUmqAL/jPo0sy8ouoRDr7K0zoc4zoUawzqpoNX4+G+JwkySpqFqtBh3ktlf0\nkpQ4g16SEmfQS1LiDHpJSpxBL0mJM+glKXEGvSQlzqCXpMTN5CcQeip+8b9UAwvezRvjvyy7DEnq\nq/LujH2spDM3qd0K3qEr6UzhnbGSpJYMeklKnEEvSYkz6CUpcUWD/izCBOETUwkuBPYArwBPAgua\n9t0MHAD2A2t6U6YkqVNFg/5OwvSAE19RuYsQ9CuBp+M2hDlj18flNcD9MziHJKkPioTwMuA64EEa\nX+tZC2yL69uAG+L6OmA7cBw4BBwEVveoVklSB4oE/X3A54CTTW2LgLG4Pha3AZYAo037jQJLu6xR\nktSFdnfGXg8cJYzPZ1PsU6cxpDPV86cZ2tlYz1ZBNtimEkmaY/I8J8/zro/T7g6rrcAngRPAucB7\ngH8BriAE/xFgMfAM8Ls0xurvjsvvA1uA5ycdtzJ3xpZtYMEC3hgfL7sMSWeATu+MnckLrgL+Gvhz\n4MvAL4AvEcJ9QVwOAo8TxuWXAk8Bl3D6VX1lgr6ev1huDdkV/gyDpEI6DfqZ/qjZRCLdDewANhI+\ndL0pto/E9hHCXwGbmH5YR5LUZ/6omVf0ks4Q/qiZJKklg16SEmfQS1LiDHpJSpxBL0mJM+glKXEG\nvSQlzqCXpMQZ9JKUOINekhJn0EtS4gx6SUqcQS9JiTPoJSlxBr0kJc6gl6TEtQv6cwnzve4jzBr1\nxdg+BIwSJg3fC1zb9JrNwAFgP7Cmh7VKkjrQbirBXwMfBd6O+z4HXEmYHvDe+Gg2CKyPy4k5Y1cC\nJ3tXsiRpJooM3bwdl/OBs4DxuN1qOqt1wHbgOGEu2YOEicIlSSUpEvTzCEM3Y8AzwE9j++3AS8BD\nwILYtoQwpDNhlHBlL0kqSbuhGwjDLpcB7wV+AGTAA8Dn4/NfAO4BNk7x+pYzXw/tbKxnqyAbLFKu\nJM0deZ6T53nXx5npbOJ/D/wv8I9NbSuAJ4D3A3fFtrvj8vvAFsIHus3q9cdmeOY+qN0K9fzFcmvI\nrqBeb/leKEmnqNVqMPPcbjt0cwGNYZnzgI8RvmVzYdM+Hwdejuu7gZsJ4/kXAZcCL8y0KElS77Qb\nulkMbCO8IcwDHgWeBh4hDOfUgdeA2+L+I8COuDwBbGKKoRtJ0uyY8Z8APeLQzUQNDt1IKqhfQzeS\npDOcQS9JiTPoJSlxBr0kJc6gl6TEGfSSlDiDXpISZ9BLUuIMeklKnEEvSYkz6CUpcQa9JCXOoJek\nxBn0kpQ4g16SEmfQS1Li2gX9uYT5XvcRZo36YmxfCOwBXgGepDHdIMBm4ACwH1jTy2IlSTPXLuh/\nDXyUMG3g78f1KwmTgO8BVhKmFpyYFHwQWB+X1wD3FziHJKmPioTw23E5HzgLGAfWEuaSJS5viOvr\ngO3AceAQcBBY3aNaJUkdKBL08whDN2PAM8BPgUVxm7hcFNeXAKNNrx0FlvakUklSR84usM9JwtDN\ne4EfEIZvmtXjYyotnxva2VjPVkE2WKASSZpD8jwnz/Ouj1Mk6Ce8CXwH+APCVfyFwBFgMXA07nMY\nWN70mmWx7TRDN860VEmaW7IsI8uyd7aHh4c7Ok67oZsLaHyj5jzgY8BeYDewIbZvAHbF9d3AzYTx\n/IuAS4EXOqpMktQT7a7oFxM+bJ0XH48SvmWzF9gBbCR86HpT3H8kto8AJ4BNTD+sI0nqs3ZB/zLw\nwRbtbwBXT/GarfEhSaoAv+MuSYkz6CUpcQa9JCXOoJekxBn0kpQ4g16SEmfQS1LiDHpJSpxBL0mJ\nM+glKXEGvSQlzqCXpMQZ9JKUOINekhJn0EtS4ooE/XIak4L/BLgjtg8RJv/eGx/XNr1mM3AA2A+s\n6VGtkqQOFJkz9jjwGWAfcD7wI2APYeaoe+Oj2SCwPi6XAk8BKwmTjEuSZlmRK/ojhJAH+BXwM0KA\nA9Ra7L8O2E54gzgEHARWd1WlJKljMx2jXwFcDvwwbt8OvAQ8RGMS8SWEIZ0JozTeGCRJs2wmQX8+\n8G3gTsKV/QPARcBlwOvAPdO81gnCJakkRcboAc4BdgLfAHbFtqNNzz8IPBHXDxM+wJ2wLLadYmhn\nYz1bBdlgwUokaY7I85w8z7s+Tqsx9lb7bAN+QfhQdsJiwpU8sf0K4C8IH8I+ThiXn/gw9hJOvaqv\n1x/rqu6eqN0K9fzFcmvIrqBe9w8eSe3VajUoltunKHJF/xHgE8CPCV+jBPhb4BbCsE0deA24LT43\nAuyIyxPAJhy6kaTSFAn652g9lv+9aV6zNT4kSSXzzlhJSpxBL0mJM+glKXEGvSQlzqCXpMQVvWFK\nmtbCgQHGjx0ruwwGFizgjfHxssuQKsWgT8DCgfcwfuytUms4e175N59BuAFN0qkM+gSMH3uLsu80\nrt1a7vklTc0xeklKnEEvSYkz6CUpcQa9JCXOoJekxBn0kpQ4g16SEmfQS0rewoEBarVaqY+FAwOl\n/fMXuWFqOfAI8DuEmaL+GfgKsBD4FvA+4BBwEzBxD/xm4FPAb4A7gCd7WbQkzcT4sWOl37ld5l3b\nRa7ojxPmhP094EPAp4FVwF3AHmAl8HTchjBn7Pq4vAa4v+B5JEl9UCSAjwD74vqvgJ8RJv1eS5g0\nnLi8Ia6vA7YT3iAOAQcJE4VLkkow0yvtFcDlwPPAImAsto/FbYAlwGjTa0YJbwySpBLMJOjPB3YC\ndwKTfyqxHh9Tme45SVIfFf31ynMIIf8osCu2jQEXEoZ2FgNHY/thwge4E5bFtlMM7WysZ6sgG5xB\n1ZI0B+R5Tp7nXR+nSNDXgIeAEeCfmtp3AxuAL8Xlrqb2x4F7CUM2lwIvTD7o0I0d1yxJc0KWZWRZ\n9s728PBwR8cpEvQfAT4B/BjYG9s2A3cDO4CNNL5eCeENYUdcngA24dCNJJWmSNA/x9Rj+VdP0b41\nPiTNYVWY/QzCDGhzmTNMSeqbKsx+Bs6ANsff5yQpfQa9JCXOoJekxBn0kpQ4g16SEmfQS1LiDHpJ\nSpxBL0mJM+glKXEGvSQlzqCXpMQZ9JKUOINekhJn0EtS4gx6SUpckaB/mDA/7MtNbUPAKGHGqb3A\ntU3PbQYOAPuBNT2pUppjFg4MUKvVSn0sHBgouxvUI0UmHvk68FXgkaa2OmFO2Hsn7TsIrI/LpcBT\nwErgZNeVSrOkCrMinT0P6vmLpdZQy64o9fzqnSJB/yywokV7rUXbOmA7cJwwj+xBYDXww87Kk2Zf\nFWZFmuszIqm3uhmjvx14CXgIWBDblhCGdCaMEq7sJUkl6XTO2AeAz8f1LwD3ABun2LfeqnFoZ2M9\nWwXZYIeVSFKi8jwnz/Ouj9Np0B9tWn8QeCKuHwaWNz23LLadZujGDs8sSXNElmVkWfbO9vDwcEfH\n6XToZnHT+sdpfCNnN3AzMB+4CLgUeKHDc0iSeqDIFf124CrgAuDnwBYgAy4jDMu8BtwW9x0BdsTl\nCWATUwzdSJJmR5Ggv6VF28PT7L81PiRJFeCdsZKUOINekhJn0EtS4gx6SUqcQS9JiTPoJSlxBr0k\nJc6gl6TEGfSSlDiDXpISZ9BLUuIMeklKnEEvSYkz6CUpcQa9JCXOoJekxBUJ+oeBMRrTBQIsBPYA\nrwBPAguantsMHAD2A2t6U6YkqVNFgv7rwDWT2u4iBP1K4Om4DTAIrI/La4D7C55DktQnRUL4WWB8\nUttaYFtc3wbcENfXEeaYPQ4cAg4Cq7uuUpLUsU6vthcRhnOIy0VxfQkw2rTfKLC0w3NIknqgyOTg\n7dTjY7rnTzO0s7GerYJssAeVSFJC8jwnz/Ouj9Np0I8BFwJHgMXA0dh+GFjetN+y2HaaoRs7PLMk\nzRFZlpFl2Tvbw8PDHR2n06Gb3cCGuL4B2NXUfjMwH7gIuBR4ocNzSJJ6oMgV/XbgKuAC4OfAPwB3\nAzuAjYQPXW+K+47E9hHgBLCJ6Yd1JEl9ViTob5mi/eop2rfGhySpAvyOuyQlzqCXpMQZ9JKUOINe\nkhJn0EtS4gx6SUqcQS9JiTPoJSlxBr0kJc6gl6TEGfSSlDiDXpISZ9BLUuIMeklKnEEvSYkz6CUp\ncd1ODn4I+CXwG+A4sBpYCHwLeB+N2aeOdXkeSVKHur2irwMZcDkh5AHuAvYAK4Gn47YkqSS9GLqp\nTdpeC2yL69uAG3pwDklSh3pxRf8U8B/AX8W2RcBYXB+L25KkknQ7Rv8R4HXgtwnDNfsnPV+Pj9MM\n7WysZ6sgG+yyEklKTJ7n5Hne9XG6DfrX4/J/gH8ljNOPARcCR4DFwNFWLxy6scszS1Lisiwjy7J3\ntoeHhzs6TjdDN+8C3h3XfwtYA7wM7AY2xPYNwK4uziFJ6lI3V/SLCFfxE8d5DHiSMF6/A9hI4+uV\nkqSSdBP0rwGXtWh/A7i6i+NKknrIO2MlKXEGvSQlzqCXpMQZ9JKUOINekhJn0EtS4gx6SUqcQS9J\niTPoJSlxBr0kJc6gl6TEGfSSlDiDXpISZ9BLUuIMeklKXL+C/hrC/LEHgL/p0zkkSQX0I+jPAr5G\nCPtB4BZgVR/O03f53h+VXUJS7M/esS97K/X+7EfQrwYOEqYRPA58E1jXh/P0Xb4v7X/5s83+7B37\nsrdS789+BP1S4OdN26OxTZJUgn4Efb0Px5QkdajWh2N+CBgijNEDbAZOAl9q2ucgcHEfzi1JKXsV\nuKTsIgDOJhSzApgP7OMM/TBWkjS1a4H/Ily5by65FkmSJEmdKnLj1Ffi8y8Bl89SXZO1qzMD3gT2\nxsffzVplDQ8DY8DL0+xThb5sV2dG+X25HHgG+CnwE+COKfYruz+L1JlRfn+eCzxPGKYdAb44xX5l\n92eROjPK788JZ8Uanpji+bL7EwhFHiSM1Z9D67H664DvxvU/An44W8U1KVJnBuye1apO98eEf5lT\nBWgV+hLa15lRfl9eCFwW188nDDNW8b/NInVmlN+fAO+Ky7MJfXXlpOer0J/Qvs6MavQnwGeBx2hd\nz4z6s5+/dVPkxqm1wLa4/jywAFjUx5paKXqDVz++oTQTzwLj0zxfhb6E9nVC+X15hPCGDvAr4GfA\nkkn7VKE/i9QJ5fcnwNtxOZ9w8fTGpOer0J/Qvk6oRn8uI4T5g7SuZ0b92c+gL3LjVKt9lvWxplaK\n1FkHPkz4E+m7hJ92qJoq9GURVevLFYS/QJ6f1F61/lxB6zqr0p/zCG9KY4ThppFJz1elP9vVWZX+\nvA/4HOGr6a3MqD/7GfRFb5ya/G412zdcFTnffxLGSz8AfBXY1deKOld2XxZRpb48H/g2cCfhinmy\nqvTndHVWpT9PEoaZlgF/QhgCmawK/dmuzir05/XAUcL4/HR/XRTuz34G/WFCh01YTnjXmW6fZbFt\nNhWp8y0af/J9jzCWv7D/pc1IFfqyiKr05TnATuAbtP6fuSr92a7OqvTnhDeB7wB/OKm9Kv05Yao6\nq9CfHyYMzbwGbAf+FHhk0j6V6c8iN041f6DwIcr5gKZInYtovHuuJoznl2EFxT6MLasvJ6xg6jqr\n0Jc1wv84902zTxX6s0idVejPCwhjxADnAf8G/NmkfarQn0XqrEJ/NruK1t+6qUJ/vqPVjVO3xceE\nr8XnXwI+OKvVNbSr89OEr7ftA/6d0LGzbTvw38D/EcbmPkU1+7JdnVXoyysJf8Lvo/E1umupXn8W\nqbMK/fl+wpDHPuDHhLFlqF5/FqmzCv3Z7Coa37qpWn9KkiRJkiRJkiRJkiRJkiRJkiRJ0uz7f4lZ\nETjjCQDtAAAAAElFTkSuQmCC\n",
+       "text": [
+        "<matplotlib.figure.Figure at 0xa94bca8c>"
+       ]
+      }
+     ],
+     "prompt_number": 113
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "chisq = sum( (x-y)**2/y)\n",
+      "    \n",
+      "print(\"I found a chi-square level of \",chisq)\n",
+      "print(\"Using a 95% confidence level, I do not reject the null-hypothesis and would say there is no bias in the selection\")"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "I found a chi-square level of  3.04394670237\n",
+        "Using a 95% confidence level, I do not reject the null-hypothesis and would say there is no bias in the selection\n"
+       ]
+      }
+     ],
+     "prompt_number": 119
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "hide()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "html": [
+        "<script>\n",
+        "code_show=true; \n",
+        "function code_toggle() {\n",
+        " if (code_show){\n",
+        " $('div.input').hide();\n",
+        " $('div.output_prompt').hide();\n",
+        "\n",
+        " } else {\n",
+        " $('div.input').show();\n",
+        " $('div.output_prompt').show();\n",
+        " }\n",
+        " code_show = !code_show\n",
+        "} \n",
+        "$( document ).ready(code_toggle);\n",
+        "</script>\n",
+        "<p>The raw code for this IPython notebook is by default hidden for easier reading.</p>\n",
+        "\n",
+        "<p>To toggle on/off the raw code, click <a href=\"javascript:code_toggle()\">here</a>.</p>\n",
+        "\n"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 120,
+       "text": [
+        "<IPython.core.display.HTML at 0xa94dbf2c>"
+       ]
+      }
+     ],
+     "prompt_number": 120
     }
    ],
    "metadata": {}
