got the javascript going for the expert

--- a/AI/expert.ipynb
+++ b/AI/expert.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:ff12ba7cced0eb5bab4767cabca25fe0fcd484f404797b325c17d1f4979434f9"
+  "signature": "sha256:d0697a0834430811f606682f4c02cff4e4beb5e965e04922f8ee8eae2da4fb70"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -40,14 +40,14 @@
       "cedar = node(\"CEDAR!!!\", True, True)\n",
       "sequoia = node(\"GIANT SEQUOIA!!!\", True, True)\n",
       "juniper = node(\"JUNIPER!!!\",True,True)\n",
-      "c\n",
+      "cypress = node(\"CYPRES!!!\",True, True)\n",
       "berries = node(\"Are there small berry-like fruits?\", juniper, cypress)\n",
       "giant = node(\"Is the tree enormously tall?\", sequoia, berries)\n",
       "scales = node(\"Do the end of the branches look like they have been ironed flat?\", cedar, giant)\n",
       "bundles = node(\"Do the bundles have fewer than six needles?\", pine, larch)            \n",
       "needle = node(\"Needles. Are the needles bundled in a pack?\", bundles, None) \n",
       "deciduous = node('Deciduous trees are leafless in the winter.\\nTT ',True, True)\n",
-      "coniferous_scales = node('Confirous trees or evergreens keep their leaves all winter.\\n Do the leaves have scales?', scales, needle)\n",
+      "coniferous = node('Confirous trees or evergreens keep their leaves all winter.\\n Do the leaves have scales?', scales, needle)\n",
       "needle_scales = node('Does the tree have needles or scale-like leaves?' , coniferous, deciduous)\n",
       "fail = node('Fail... This is a tree-classifying expert system...\\nExiting.', True, True)\n",
       "tree = node('Are you trying to classify a tree?', needle, fail)\n",
@@ -59,17 +59,40 @@
      "metadata": {},
      "outputs": [
       {
-       "ename": "NameError",
-       "evalue": "name 'giant' is not defined",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-53-74a0a2751166>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[0mlarch\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"LARCH!!!\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[0mcedar\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"CEDAR!!!\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 27\u001b[1;33m \u001b[0mscales\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Do the end of the branches look like they have been ironed flat?\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcedar\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgiant\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     28\u001b[0m \u001b[0mbundles\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Do the bundles have fewer than six needles?\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpine\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlarch\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     29\u001b[0m \u001b[0mneedle\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Needles. Are the needles bundled in a pack?\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbundles\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;31mNameError\u001b[0m: name 'giant' is not defined"
+       "name": "stdout",
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Welcome!\n",
+        "Please answer the questions with either a yes or a no.\n",
+        "Are you ready? yes\n"
+       ]
+      },
+      {
+       "name": "stdout",
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Are you trying to classify a tree? yes\n"
+       ]
+      },
+      {
+       "name": "stdout",
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Needles. Are the needles bundled in a pack? no\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "bug\n"
        ]
       }
      ],
-     "prompt_number": 53
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
